2020-11-03:
  - Correct URLs in DESCRIPTION

2020-09-09:
  - Fix reference to weights in 'predict()' methods

2020-08-06:
  - Let 'mclogit'/'mblogit' handle empty responses (i.e. where counts sum to
    zero) correclty.
  - Make 'mclogit' complain about non-numeric responses  

2020-07-17:
  - Documented prediction methods.
  - Improved flexibility of prediction methods. 

2020-07-16:
  - Implemented reasonable 'predict' method for mmblogit and mmclogit objects.

2020-07-15:
  - Bugfix: Make 'update' work with missing 'dispersion=' argument.
  - Bugfix: Make 'vcov' work for objects without 'phi' component.
  - Add 'vcov' method for 'mmclogit' objects.

2020-06-27:
  - Documented 'simulate()' methods.

2020-06-11:
  - Implemented (approximate) REML estimator.

2020-06-07:
  - Added a 'simulate()' method for "mblogit" and "mclogit" models.

2020-05-24:
  - Adapt the package NAMESPACE file to explicitly export S3 methods as methods,
    even if they are export as functions, as newly required by R 4.0.

2020-05-23:
  - Added documentation of (over-)dispersion parameter estimation, rename
    'overdispersion=' arguments into 'dispersion=' arguments.

2020-05-22:
  - Added support for estimation of (over-)dispersion parameters

2020-05-21:
  - Implemented MQL technique as an alternative to PQL estimation

2020-05-19:
  - Improve handling of numerical difficulties

2020-05-11:
  - Use a Cholesky-factor parameterisation to make sure that covariance matrices
    are positive (semi-)definite

2020-03-30:
  - Refactored the algorithm for fitting mixed-effects models

2020-01-09:
  - Document getSummary.mmclogit, getSummary.mmblogit
  - Make 'mblogit' handle matrix responses with zero-sum rows
  - Renamed 'residual.df' to 'df.residual' in results object of 'mclogit.fit' et
    al. (Fixes issue #4)

2019-10-23:
  - Merge pull request #3 from skyborla/fix-mblogit
    Fix mblogit for responses with only two levels
  - Export getSummary.mmclogit, getSummary.mmblogit

2019-04-20: